[package]
name = "access-queue"
version = "1.0.0"
authors = ["Without Boats <woboats@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/withoutboats/access-queue"

[dependencies]
futures-core = "0.3.5"
event-listener = "1.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
