[package]
name = "access-queue"
description = "limit the number of simultaneous accesses to a value"
version = "1.1.0"
authors = ["Without Boats <woboats@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/withoutboats/access-queue"

[dependencies]
futures-core = "0.3.5"
event-listener = "1.2.0"

[dev-dependencies]
futures-task = "0.3.5"
